<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_pagina" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical" >

            <TextView
                style="@style/menu_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_inf_nome" />

            <EditText
                android:id="@+id/edit_inf_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_inf_hint_nome"
                android:inputType="text" >

                <requestFocus />
            </EditText>

            <TextView
                style="@style/menu_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_espacos"
                android:text="@string/edit_inf_tel" />

            <EditText
                android:id="@+id/edit_inf_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_inf_hint_tel"
                android:inputType="phone" />

            <TextView
                style="@style/menu_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_espacos"
                android:text="@string/edit_inf_end" />

            <TextView
                android:id="@+id/edit_inf_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_espacos" />

            <TextView
                style="@style/menu_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_espacos"
                android:text="@string/edit_inf_obs" />

            <EditText
                android:id="@+id/edit_inf_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_inf_hint_obs"
                android:inputType="text" />

            <Button
                android:id="@+id/edit_inf_bt_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_espacos"
                android:text="@string/edit_inf_bt_save" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id" />

</LinearLayout>