<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/padding_pagina" >

        <TextView
            style="@style/menu_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_address_typequery" />

        <RadioGroup
            android:id="@+id/frag_find_radiogroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_espacos"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/frag_find_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/tipo_consulta_adds" />

            <RadioButton
                android:id="@+id/frag_find_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_consulta_cep" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/padding_espacos"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/frag_find_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/find_address_hint_address"
                android:inputType="text"
                android:singleLine="true" >

                <requestFocus />
            </EditText>

            <ImageButton
                android:id="@+id/frag_find_speak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:background="@drawable/bt_speak"
                android:contentDescription="@string/content_description_speak" />
        </LinearLayout>

        <Button
            android:id="@+id/frag_find_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_espacos"
            android:text="@string/find_address_bt_consulta" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/ad_unit_id" />

</LinearLayout>