<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_logo"
            android:gravity="top|center_horizontal"
            android:paddingBottom="40dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="40dp"
            android:src="@drawable/sobre" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sobre_lb_desenvolvimento"
                android:textColor="@color/texto_laranja"
                android:textSize="@dimen/texto_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/sobre_desenvolvedor"
                android:textColor="@color/texto_branco"
                android:textSize="@dimen/texto_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/sobre_email_desenvolvedor"
                android:textColor="@color/texto_cinza"
                android:textSize="@dimen/texto_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/sobre_lb_design"
                android:textColor="@color/texto_laranja"
                android:textSize="@dimen/texto_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/sobre_design"
                android:textColor="@color/texto_branco"
                android:textSize="@dimen/texto_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/sobre_email_design"
                android:textColor="@color/texto_cinza"
                android:textSize="@dimen/texto_1" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|bottom"
            android:paddingBottom="@dimen/padding_pagina"
            android:text="@string/version"
            android:textColor="@color/texto_branco"
            android:textSize="@dimen/texto_3" />
    </LinearLayout>

</LinearLayout>